--- a/platformio.ini
+++ b/platformio.ini
@@ -9,12 +9,12 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env]
-platform = teensy
+platform = teensy@4.14
 framework = arduino
 lib_deps =
-	olikraus/U8g2 @ ^2.34.4
+	olikraus/U8g2 @ 2.34.5
 	adafruit/Adafruit VS1053 Library @ 1.2.1
-	https://github.com/luni64/EncoderTool
+	https://github.com/luni64/EncoderTool.git#v3.0.6
 	alexiii/incbin @ ^0.1.2
 	luni64/TeensyTimerTool @ ^0.4.4
 	dlloydev/QuickPID @ ^3.1.2
@@ -25,9 +25,9 @@ extra_scripts =
 board = teensylc
 build_flags =
 	-D TEENSY_OPT_SMALLEST_CODE_LTO
-	#-D USB_DISABLED
+#	-D USB_DISABLED
 	-D SDFAT_LOWMEM
-	-D HWSERIALDEBUG
+	#-D HWSERIALDEBUG
 	-D U8X8_NO_HW_I2C
 	-D U8G2_WITHOUT_INTERSECTION
 	-D U8G2_WITHOUT_CLIP_WINDOW_SUPPORT
